<resources>
    <string name="about"                > About CS Tracker    </string>
    <string name="app_name"             > CS Tracker          </string>
    <string name="event_add"            > Add An Event        </string>
    <string name="event_view"           > Events              </string>
    <string name="senior_tech_help"     > Senior Tech Help    </string>
    <string name="secondary_user_add"   > Add A Profile       </string>
    <string name="secondary_user_view"  > Profiles            </string>
    <string name="settings"             > Settings            </string>
    <string name="theme"                > Theme               </string>
    <string name="user_add"             > Add A User          </string>
    <string name="user_password_reset"  > Reset Your Password </string>
    <string name="signUpCheckBox" > Are you keeping track of someone else\'s hours?</string>
    <string name="icon_about_description"      > An information icon  </string>
    <string name="icon_contact_us_description" > A feedback icon      </string>
    <string name="icon_feedback_description"   > A feedback icon      </string>
    <string name="icon_sign_out_description"   > A user sign out icon </string>
    <string name="icon_theme_description"      > A theme icon         </string>
    <string name="icon_user_description"       > A user mode icon     </string>
    <string name="email"            > Email            </string>
    <string name="event_name"       > Name             </string>
    <string name="event_notes"      > Notes            </string>
    <string name="first_name"       > First Name       </string>
    <string name="goal"             > Goal (hr)        </string>
    <string name="grade"            > Grade            </string>
    <string name="last_name"        > Last Name        </string>
    <string name="location"         > Location         </string>
    <string name="organization"     > Organization     </string>
    <string name="password"         > Password         </string>
    <string name="password_confirm" > Confirm Password </string>
    <string name="people_in_charge" > People In Charge </string>
    <string name="phone_number"     > Phone            </string>
    <string name="fab_add"        > Adds a user profile  </string>
    <string name="fab_add_event"  > Adds a user event    </string>
    <string name="fab_exit"       > Exits the activity   </string>
    <string name="fab_save"       > Saves a user profile </string>
    <string name="fab_save_event" > Saves a user event   </string>
    <string name="check_activation" > Check Activation </string>
    <string name="reset_password"   > Reset Password   </string>
    <string name="signin"           > Sign In          </string>
    <string name="signup"           > Sign Up          </string>
    <string name="button_negative"            > Cancel                                                                                                     </string>
    <string name="button_only"                > OK                                                                                                         </string>
    <string name="button_positive"            > Yes                                                                                                        </string>
    <string name="error_email_blank"          > The email must not be blank                                                                                </string>
    <string name="error_email_match"          > The text entered is not an email                                                                           </string>
    <string name="error_email_verification"   > Your account is still not verified please try again                                                        </string>
    <string name="error_event_date_blank"     > You must choose an event date                                                                              </string>
    <string name="error_event_location_blank" > The event location must not be blank                                                                       </string>
    <string name="error_event_location_long"  > The event location must be smaller or equal to 100 characters                                              </string>
    <string name="error_event_name_blank"     > The event name must not be blank                                                                           </string>
    <string name="error_event_name_long"      > The event name must be smaller or equal to 50 characters                                                   </string>
    <string name="error_event_incharge_blank" > The event people in charge must not be blank                                                               </string>
    <string name="error_event_incharge_long"  > The event people in charge must be smaller or equal to 50 characters                                       </string>
    <string name="error_event_notes_long"     > The event notes must be smaller or equal to 1000 characters                                                </string>
    <string name="error_first_name_blank"     > The first name must not be blank                                                                           </string>
    <string name="error_first_name_long"      > The first name must be smaller or equal to 20 characters                                                   </string>
    <string name="error_first_name_symbol"    > The first name must not contain a symbol                                                                   </string>
    <string name="error_general"              > There seems to be a problem, please try again                                                              </string>
    <string name="error_goal_long"            > The goal must be smaller or equal to 100,000                                                               </string>
    <string name="error_grade_long"           > The grade must be smaller or equal to 12                                                                   </string>
    <string name="error_last_name_blank"      > The last name must not be blank                                                                            </string>
    <string name="error_last_name_long"       > The last name must be smaller or equal to 20 characters                                                    </string>
    <string name="error_last_name_symbol"     > The last name must not contain a symbol                                                                    </string>
    <string name="error_organization_blank"   > The organization must not be blank                                                                         </string>
    <string name="error_organization_long"    > The organization must be less than or equal to 30 characters                                               </string>
    <string name="error_password_blank"       > The password must not be blank                                                                             </string>
    <string name="error_password_match"       > The two passwords do not match                                                                             </string>
    <string name="error_password_short"       > The password must be longer than 12 characters                                                             </string>
    <string name="general_app_close"          > This will close the CS Tracker app                                                                         </string>
    <string name="general_delete_check_user"  > Deleting this profile will remove all if its data                                                          </string>
    <string name="general_email_verification" > An activation email was sent. Please activate your account and click the button to continue.               </string>
    <string name="general_reset_password"     > An email request was sent to change your password. It could take up to five minutes to receive the message </string>
    <string name="general_sign_out"           > This will sign out of the CS Tracker app                                                                   </string>
    <string name="positive_no_save"           > Any data entered will be lost                                                                              </string>
    <string name="title_theme"                > Pick A Theme Color                                                                                         </string>
    <string name="title_double_check"         > Are You Sure?                                                                                              </string>
    <string name="title_error"                > Uh Oh                                                                                                      </string>
    <string name="title_request"              > Request Sent                                                                                               </string>
    <string name="title_sort_event"           > Sort Events                                                                                                </string>
    <string name="title_sort_secondary_user"  > Sort User Profiles                                                                                         </string>
    <string name="title_verification_sent"    > Email Verification Sent                                                                                    </string>
    <string name="menu_clear"    > Clear    </string>
    <string name="menu_delete"   > Delete   </string>
    <string name="menu_edit"     > Edit     </string>
    <string name="menu_search"   > Search   </string>
    <string name="menu_settings" > Settings </string>
    <string name="menu_sort"     > Sort     </string>
    <string name="back_to_sign_in_text"      > Go back to sign in                           </string>
    <string name="changelog_one_text"        > 1. First release published                   </string>
    <string name="description_about_text"    > CS Tracker and contact info                  </string>
    <string name="description_color_text"    > The primary theme color for CS Tracker       </string>
    <string name="description_oled_text"     > Makes the black theme true black             </string>
    <string name="description_random_text"   > A new theme is set when the app starts       </string>
    <string name="description_sign_out_text" > Sign out of the CS Tracker app               </string>
    <string name="description_theme_text"    > Choose a custom theme                        </string>
    <string name="description_update_text"   > 12–10–20                                     </string>
    <string name="description_version_text"  > 1.0.0                                        </string>
    <string name="name_text"                 > name                                         </string>
    <string name="name_letter_text"          > A                                            </string>
    <string name="time_default_text"         > 0:00                                         </string>
    <string name="title_changelog_text"      > Changelog                                    </string>
    <string name="title_contact_us_text"     > Need help? Contact us                        </string>
    <string name="title_feedback_text"       > Send us feedback                             </string>
    <string name="title_grade_text"          > Grade:                                       </string>
    <string name="title_goal_text"           > Goal:                                        </string>
    <string name="title_updated_text"        > Last Updated:                                </string>
    <string name="title_version_text"        > Version:                                     </string>
</resources>