<?xml version="1.0" encoding="utf-8"?>

<!-- CoordinatorLayout UI For Class About -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android         ="http://schemas.android.com/apk/res/android"
    xmlns:node            ="http://schemas.android.com/apk/res-auto"
    xmlns:tools           ="http://schemas.android.com/tools"
    android:background    ="?attr/layoutPrimary"
    android:layout_height ="match_parent"
    android:layout_width  ="match_parent" >

  <!-- ConstraintLayout UI For Class About -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id            ="@+id/uiAbout"
      android:padding       ="16dip"
      android:layout_height ="match_parent"
      android:layout_width  ="match_parent"
      tools:context         =".settings.Settings">

    <!-- TextView activityAbout -->
    <com.google.android.material.textview.MaterialTextView
        android:id                        ="@+id/activityAbout"
        android:gravity                   ="center"
        android:text                      ="@string/about"
        android:textColor                 ="?colorPrimary"
        android:textSize                  ="30sp"
        android:textStyle                 ="bold"
        android:layout_height             ="wrap_content"
        android:layout_width              ="match_parent"
        node:layout_constraintTop_toTopOf ="parent"
    />

    <!-- TextView textTitleVersion -->
    <com.google.android.material.textview.MaterialTextView
        android:id                            ="@+id/textTitleVersion"
        android:text                          ="@string/title_version_text"
        android:textSize                      ="18sp"
        android:textStyle                     ="bold"
        android:layout_marginTop              ="32dip"
        android:layout_marginStart            ="16dip"
        android:layout_height                 ="wrap_content"
        android:layout_width                  ="wrap_content"
        node:layout_constraintTop_toBottomOf  ="@id/activityAbout"
        node:layout_constraintStart_toStartOf ="parent"
    />

    <!-- TextView textDescriptionVersion -->
    <com.google.android.material.textview.MaterialTextView
        android:id                              ="@+id/textDescriptionVersion"
        android:text                            ="@string/description_version_text"
        android:textSize                        ="18sp"
        android:layout_marginStart              ="5dip"
        android:layout_height                   ="wrap_content"
        android:layout_width                    ="wrap_content"
        node:layout_constraintTop_toTopOf       ="@id/textTitleVersion"
        node:layout_constraintBottom_toBottomOf ="@id/textTitleVersion"
        node:layout_constraintStart_toEndOf     ="@id/textTitleVersion"
    />

    <!-- TextView textTitleLastUpdate -->
    <com.google.android.material.textview.MaterialTextView
        android:id                            ="@+id/textTitleLastUpdate"
        android:text                          ="@string/title_updated_text"
        android:textSize                      ="18sp"
        android:textStyle                     ="bold"
        android:layout_marginTop              ="16dip"
        android:layout_marginStart            ="16dip"
        android:layout_height                 ="wrap_content"
        android:layout_width                  ="wrap_content"
        node:layout_constraintTop_toBottomOf  ="@id/textTitleVersion"
        node:layout_constraintStart_toStartOf ="parent"
    />

    <!-- TextView textDescriptionLastUpdate-->
    <com.google.android.material.textview.MaterialTextView
        android:id                              ="@+id/textDescriptionLastUpdate"
        android:text                            ="@string/description_update_text"
        android:textSize                        ="18sp"
        android:layout_marginStart              ="5dip"
        android:layout_height                   ="wrap_content"
        android:layout_width                    ="wrap_content"
        node:layout_constraintTop_toTopOf       ="@id/textTitleLastUpdate"
        node:layout_constraintBottom_toBottomOf ="@id/textTitleLastUpdate"
        node:layout_constraintStart_toEndOf     ="@id/textTitleLastUpdate"
    />

    <!-- TextView textTitleChangelog -->
    <com.google.android.material.textview.MaterialTextView
        android:id                            ="@+id/textTitleChangelog"
        android:text                          ="@string/title_changelog_text"
        android:textSize                      ="18sp"
        android:textStyle                     ="bold"
        android:paddingBottom                 ="5dip"
        android:layout_marginTop              ="16dip"
        android:layout_marginStart            ="16dip"
        android:layout_height                 ="wrap_content"
        android:layout_width                  ="wrap_content"
        node:layout_constraintTop_toBottomOf  ="@id/textTitleLastUpdate"
        node:layout_constraintStart_toStartOf ="parent"
    />

    <!-- TextView textChangelogOne-->
    <com.google.android.material.textview.MaterialTextView
        android:id                              ="@+id/textChangelogOne"
        android:text                            ="@string/changelog_one_text"
        android:textSize                        ="18sp"
        android:layout_marginStart              ="16dip"
        android:layout_height                   ="wrap_content"
        android:layout_width                    ="wrap_content"
        node:layout_constraintTop_toBottomOf="@id/textTitleChangelog"
        node:layout_constraintStart_toStartOf="parent"
    />

    <!-- CardView cardFeedback -->
    <com.google.android.material.card.MaterialCardView
        android:id                           ="@+id/cardFeedback"
        android:clickable                    ="true"
        android:focusable                    ="true"
        android:layout_marginTop             ="32dip"
        android:layout_height                ="wrap_content"
        android:layout_width                 ="match_parent"
        node:cardBackgroundColor             ="?colorPrimary"
        node:cardCornerRadius                ="16dip"
        node:cardElevation                   ="0dip"
        node:rippleColor                     ="@color/white"
        node:layout_constraintTop_toBottomOf ="@id/textChangelogOne">

      <!-- ConstraintLayout UI For cardFeedback -->
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_height ="match_parent"
          android:layout_width  ="match_parent">

        <!-- ImageView iconFeedback -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id                              ="@+id/iconAbout"
            android:src                             ="@drawable/feedback"
            android:contentDescription              ="@string/icon_feedback_description"
            android:layout_marginTop                ="20dip"
            android:layout_marginBottom             ="20dip"
            android:layout_marginStart              ="20dip"
            android:layout_height                   ="40dip"
            android:layout_width                    ="40dip"
            node:layout_constraintTop_toTopOf       ="parent"
            node:layout_constraintBottom_toBottomOf ="parent"
            node:layout_constraintStart_toStartOf   ="parent"
        />

        <!-- TextView textTitleFeedback -->
        <com.google.android.material.textview.MaterialTextView
            android:id                          ="@+id/textTitleFeedback"
            android:text                        ="@string/title_feedback_text"
            android:textColor                   ="@color/white"
            android:textSize                    ="18sp"
            android:textStyle                   ="bold"
            android:paddingTop                  ="5dip"
            android:paddingStart                ="16dip"
            android:paddingEnd                  ="16dip"
            android:layout_height               ="wrap_content"
            android:layout_width                ="wrap_content"
            node:layout_constraintTop_toTopOf   ="@id/iconAbout"
            node:layout_constraintStart_toEndOf ="@id/iconAbout"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- CardView cardContactUs -->
    <com.google.android.material.card.MaterialCardView
        android:id                           ="@+id/cardContactUs"
        android:clickable                    ="true"
        android:focusable                    ="true"
        android:layout_marginTop             ="16dip"
        android:layout_height                ="wrap_content"
        android:layout_width                 ="match_parent"
        node:cardBackgroundColor             ="?colorPrimary"
        node:cardCornerRadius                ="16dip"
        node:cardElevation                   ="0dip"
        node:rippleColor                     ="@color/white"
        node:layout_constraintTop_toBottomOf ="@id/cardFeedback">

      <!-- ConstraintLayout UI For cardFeedback -->
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_height ="match_parent"
          android:layout_width  ="match_parent">

        <!-- ImageView iconContactUs -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id                              ="@+id/iconContactUs"
            android:src                             ="@drawable/contact_us"
            android:contentDescription              ="@string/icon_contact_us_description"
            android:layout_marginTop                ="20dip"
            android:layout_marginBottom             ="20dip"
            android:layout_marginStart              ="20dip"
            android:layout_height                   ="40dip"
            android:layout_width                    ="40dip"
            node:layout_constraintTop_toTopOf       ="parent"
            node:layout_constraintBottom_toBottomOf ="parent"
            node:layout_constraintStart_toStartOf   ="parent"
            />

        <!-- TextView textTitleContactUs -->
        <com.google.android.material.textview.MaterialTextView
            android:id                          ="@+id/textTitleContactUs"
            android:text                        ="@string/title_contact_us_text"
            android:textColor                   ="@color/white"
            android:textSize                    ="18sp"
            android:textStyle                   ="bold"
            android:paddingTop                  ="5dip"
            android:paddingStart                ="16dip"
            android:paddingEnd                  ="16dip"
            android:layout_height               ="wrap_content"
            android:layout_width                ="wrap_content"
            node:layout_constraintTop_toTopOf   ="@id/iconContactUs"
            node:layout_constraintStart_toEndOf ="@id/iconContactUs"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


  </androidx.constraintlayout.widget.ConstraintLayout>

  <!-- FloatingActionButton fabExit -->
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id                 ="@+id/fabExit"
      android:src                ="@drawable/menu_clear"
      android:contentDescription ="@string/fab_exit"
      android:layout_height      ="wrap_content"
      android:layout_width       ="wrap_content"
      node:backgroundTint        ="?colorPrimaryDark"
      node:fabSize               ="normal"
      node:layout_anchor         ="@id/bottomBar"
      node:rippleColor           ="?attr/ripplePrimary"
      node:tint                  ="@color/white"
  />

  <!-- BottomBar bottomBar -->
  <com.google.android.material.bottomappbar.BottomAppBar
      android:id             ="@+id/bottomBar"
      android:layout_gravity ="bottom"
      android:layout_height  ="wrap_content"
      android:layout_width   ="match_parent"
      node:backgroundTint    ="?colorPrimary"
      node:fabAlignmentMode  ="center"
  />

</androidx.coordinatorlayout.widget.CoordinatorLayout>